--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -18,7 +18,7 @@
     </div>
     
     <div class="col-lg-12">
-    <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
+    <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
     </div>
 
     <div class="col-lg-12">
@@ -26,16 +26,17 @@
     </div>
 
     <div class="col-lg-12">
-    <input type="password" id="password" name="_password" required="required" autocomplete="current-password" />
+    <input type="password" class="form-control" id="password" name="_password" required="required" autocomplete="current-password" />
     </div>
 
+    
     <div class="col-lg-12" id="rememberDiv">
     <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
     <label class="remember" for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
     
 
      
-    <input type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+    <input class="btn btn-primary" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
     </div>
 </div>
 </form>
