--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,9 @@
+/* FONTS */
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+/* FONTS END */
+
 /* normalitzacio d'estils */
 
 html, body {
@@ -795,25 +801,70 @@ div.dataTables_wrapper div.dataTables_filter input {
 
 /*Eddy LOGIN*/
 .fondo-eddy{
+	
 	background-image: url("../img/estudio.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: right;
+	position: absolute;
+	z-index: 0;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	opacity: 0.05;
 }
 
-.formulario-login, .fos_user_registration_register{
+.askuser {
+	background-color: rgba(255,255,255,1); 
+	min-height: 100vh;
+	overflow: hidden;
+}
+
+.formulario-login, .formulario-register{
 	background-color:rgba(255,255,255,0.5);
 	width: 80%;
 	max-width: 500px;
 	margin-top: 200px;
-	border: gray 1px solid;
-	padding: 10px;
-	-webkit-box-shadow: 25px 15px 36px 1px rgba(0,0,0,0.56);
-	-moz-box-shadow: 25px 15px 36px 1px rgba(0,0,0,0.56);
-	box-shadow: 25px 15px 36px 1px rgba(0,0,0,0.56);
+	box-shadow: 10px 10px 17px 0px rgba(0,0,0,0.25);
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+	font-family: 'Montserrat', sans-serif;
+	z-index: 1;
+	background-color: white;
 }
 
-.fos_user_registration_register{
+.askuser form {
+	padding: 15px;
+}
+
+.formheader {
+	width: 100%;
+	text-align: center;
+	background-color: #005a9e;
+	color: white;
+	display: table;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+
+.formheader h2 {
+	display: table-cell;
+	vertical-align: middle;
+	padding: 10px;
+}
+
+.buttonLoginRegisterDiv {
+	margin-top: 10px;
+	text-align: center;
+}
+
+.buttonLoginRegister {
+	width: 50%!important;
+	display: inline-block;
+}
+
+.formulario-register{
 	margin-top: 50px!important;
 }
 
