--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -6,7 +6,14 @@
 <div> 
 <div class="container-fluid d-flex justify-content-center">
 
-<form action="{{ path("fos_user_security_check") }}" method="post" class="d-flex justify-content-center formulario-login">
+<div class="formulario-login">
+
+<div class="formheader">
+    <h2>Iniciar sessió</h2>
+</div>
+
+<form action="{{ path("fos_user_security_check") }}" method="post" class="d-flex justify-content-center">
+
     {% if csrf_token %}
         <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
     {% endif %}
@@ -31,15 +38,16 @@
 
     
     <div class="col-lg-12" id="rememberDiv">
-    <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-    <label class="remember" for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-    
-
-     
-    <input class="btn btn-primary" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+        <label class="remember" for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
     </div>
+
+    <div class="col col-lg-12 buttonLoginRegisterDiv">
+        <input class="btn btn-primary buttonLoginRegister" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+     </div>
 </div>
 </form>
+</div>
             
         </div>
     </div>
