--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
                 </button>
                 <a href="#" class="navbar-brand ml-3"><img id="logo" src="{{ asset('img/Logotip_UB.png') }}" alt="Logo Universitat Barcelona"></a>
                 <span class="ml-auto mr-2">
-                    Connectat com <a href="#"><i class="fas fa-user ml-2 mr-1"></i>{{ user.username }}</a><a href="{{ path('fos_user_security_logout') }}" class="ml-4 text-white"><i class="fas fa-power-off"></i></a>
+                    Connectat com <a href="#"><i class="fas fa-user ml-2 mr-1"></i>{{ app.user.username }}</a><a href="{{ path('fos_user_security_logout') }}" class="ml-4 text-white"><i class="fas fa-power-off"></i></a>
                 </span>
             </nav>  
         </div>
