--- a/templates/pregunta/afegirPregunta.html.twig
+++ b/templates/pregunta/afegirPregunta.html.twig
@@ -13,7 +13,7 @@
 
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="{{ path('usuaris') }}" class="link-blue"><i class="fas fa-question mr-2"></i>Preguntes</a></li>
+				<li class="breadcrumb-item"><a href="{{ path('preguntes') }}" class="link-blue"><i class="fas fa-question mr-2"></i>Preguntes</a></li>
 				<li class="breadcrumb-item active" aria-current="page">Afegir pregunta</li>
 			</ol>
 		</nav>
@@ -22,44 +22,86 @@
 			<h1 class="h3">NOVA PREGUNTA</h1><a class="btn btn-link link-blue" href="javascript:history.back()"><i class="fas fa-arrow-left"></i> TORNAR</a>
 		</div>
 		<div class="card-body">
-			<form>
-				<div class="accordion" id="idiomesPregunta">
+			<div class="col-12 alert alert-info">Selecciona una de les opcions de tots els desplegables i completa com a mínim els camps d'un dels idiomes per continuar.</div>
+			<form method="post">
+				<div class="form-row">
+					<div class="col-4 form-group">
+						<label for="nivell">Nivell  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
+						<select name="nivell" id="nivell" class="form-control campPregunta" required>
+							<option value="">-- Selecciona un nivell --</option>
+							{% for nivell in nivells %}
+								<option value="{{ nivell.id }}">{{ nivell.nom }}</option>
+							{% endfor %}
+						</select>
+					</div>
+					<div class="col-4 form-group">
+						<label for="tema">Tema  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
+						<select name="tema" id="tema" class="form-control campPregunta" required>
+							<option value="">-- Selecciona un nivell --</option>
+						</select>
+					</div>
+					<div class="col custom-control custom-checkbox" style="padding-top: 38px; padding-left: 80px;">
+						<input class="custom-control-input" type="checkbox" id="estat" name="estat" checked>
+        				<label class="custom-control-label" for="estat">Pregunta activa</label>
+					</div>
+				</div>
+				<div class="form-row">
+					<div class="col-4 form-group">
+						<label for="dificultat">Dificultat  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
+						<select name="dificultat" id="dificultat" class="form-control campPregunta" required>
+							<option value="">-- Selecciona una dificultat --</option>
+							{% for dificultat in dificultats %}
+								<option value="{{ dificultat.id }}">{{ dificultat.nom }}</option>
+							{% endfor %}
+						</select>
+					</div>
+					<div class="col-4 form-group">
+						<label for="tipus">Tipus  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
+						<select name="tipus" id="tipus" class="form-control campPregunta" required>
+							<option value="">-- Selecciona un tipus --</option>
+							{% for t in tipus %}
+								<option value="{{ t.id }}">{{ t.nom }}</option>
+							{% endfor %}
+						</select>
+					</div>
+				</div>
+				<div class="accordion mt-4" id="idiomesPregunta">
 					{% set idiomes = ['Cat', 'Es', 'En'] %}
 					{% for idioma in idiomes %}
 						<div class="card rounded-0 border-white">
-							<div class="card-header h-auto card-blue border-0 rounded-0" id="heading{{ idioma }}" data-toggle="collapse" data-target="#collapse{{ idioma }}" aria-expanded="{% if loop.first %}true{% else %}false{% endif %}" aria-controls="collapse{{ idioma }}">
+							<div class="card-header h-auto card-blue border-0 rounded-0" id="heading{{ idioma }}" data-toggle="collapse" data-target="#collapse{{ idioma }}" aria-expanded="false" aria-controls="collapse{{ idioma }}">
 								<span class="mb-0 preguntesLanguageHeader">
 								  <img src="{% if idioma == 'Cat' %}{{ asset('img/cat.jpg') }}{% elseif idioma == 'Es' %}{{ asset('img/esp.gif') }}{% else %}{{ asset('img/en.png') }}{% endif %}" alt="" class="mr-2 rounded-circle language-icon">
 								   {% if idioma == 'Cat' %}Català{% elseif idioma == 'Es' %}Castellà{% else %}Anglès{% endif %}
 								  <span class=" float-right d-none" id="{{ idioma }}Valid"><i class="fas fa-check text-success"></i></span>
 								</span>
 							</div>
-							<div id="collapse{{ idioma }}" class="collapse {% if loop.first %}show{% endif %}" aria-labelledby="heading{{ idioma }}" data-parent="#idiomesPregunta">
+							<div id="collapse{{ idioma }}" class="collapse" aria-labelledby="heading{{ idioma }}" data-parent="#idiomesPregunta">
 								<div class="card-body">
 									<div class="form-row col-8">
 										<div class="col form-group">
 											<label for="nom">Text de la pregunta  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
-											<textarea name="pregunta{{ idioma }}" rows="3" id="pregunta{{ idioma }}" class="form-control" required></textarea>
+											<textarea name="pregunta{{ idioma }}" rows="3" id="pregunta{{ idioma }}" class="form-control campPregunta"></textarea>
 										</div>
 									</div>
 									<div class="form-row col-8">
 										<div class="col form-group">
 											<label for="nom">Resposta correcta  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
-											<textarea name="correcta{{ idioma }}" id="correcta{{ idioma }}" class="form-control" required></textarea>
+											<textarea name="correcta{{ idioma }}" id="correcta{{ idioma }}" class="form-control campPregunta"></textarea>
 										</div>
 										<div class="col form-group">
 											<label for="cognoms">Resposta incorrecta 1  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
-											<textarea name="incorrecta{{ idioma }}1" id="incorrecta{{ idioma }}1" class="form-control" required></textarea>
+											<textarea name="incorrecta{{ idioma }}1" id="incorrecta{{ idioma }}1" class="form-control campPregunta"></textarea>
 										</div>
 									</div>
 									<div class="form-row col-8">
 										<div class="col form-group">
 											<label for="username">Resposta incorrecta 2  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
-											<textarea name="incorrecta{{ idioma }}2" id="incorrecta{{ idioma }}2" class="form-control" required></textarea>
+											<textarea name="incorrecta{{ idioma }}2" id="incorrecta{{ idioma }}2" class="form-control campPregunta"></textarea>
 										</div>
 										<div class="col form-group">
 											<label for="email">Resposta incorrecta 3 <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
-											<textarea name="incorrecta{{ idioma }}3" id="incorrecta{{ idioma }}3" class="form-control" required></textarea>
+											<textarea name="incorrecta{{ idioma }}3" id="incorrecta{{ idioma }}3" class="form-control campPregunta"></textarea>
 										</div>
 									</div>
 								</div>
@@ -77,20 +119,45 @@
 {% block javascriptsBottom %}
 	{{ parent() }}
 	<script>
-		$( document ).ready(function() {
-			$('textarea').on('change', function() {
-				var cat = validar('Cat');
-				var es = validar('Es');
-				var en = validar('En');
-				if (cat || es || en) {
+		$(document).ready(function() {
+			$('.campPregunta').on('keyup change', function() {
+				var cat = validarIdioma('Cat');
+				var es = validarIdioma('Es');
+				var en = validarIdioma('En');
+				var tema = validarSelector('tema');
+				var dificultat = validarSelector('dificultat');
+				var tipus = validarSelector('tipus');
+
+				if ((cat || es || en) && (tema && dificultat && tipus)) {
 					$('#addBtn').prop('disabled', false);
 				} else {
 					$('#addBtn').prop('disabled', true);
 				}
 			});
+
+			$('#nivell').change(function() {
+				var url = `{{ path('llistaTemes') }}`;
+				$.post(url, { nivell: $('#nivell').val() })
+				.done(function(response) {
+					var html = `<option value=''>-- Selecciona un tema --</option>`;
+					for (let tema in response) {
+						html += `<option value='${response[tema]['id']}'>${response[tema]['nom']}</option>`;
+					}
+					$('#tema').html(html);
+				});
+			});
 		});
 
-		function validar(idioma) {
+		function validarSelector(nomSelect) {
+			if ($(`#${nomSelect}`).val() != '') {
+				console.log('es true');
+				return true;
+			} else {
+				return false;
+			}
+		}
+
+		function validarIdioma(idioma) {
 			if ($('#pregunta' + idioma).val() != '' && $('#correcta' + idioma).val() != '' && $('#incorrecta' + idioma + '1').val() != '' && $('#incorrecta' + idioma + '2').val() != '' && $('#incorrecta' + idioma + '3').val() != '') {
 				$('#' + idioma + 'Valid').removeClass('d-none');
 				return true;
