--- a/templates/pregunta/index.html.twig
+++ b/templates/pregunta/index.html.twig
@@ -17,7 +17,6 @@
 				<span class="text-blue"><i class="far fa-eye ml-3 mr-1"></i>Veure detalls</span>
 				<span class="text-orange"><i class="far fa-check-square ml-3"></i> / <i class="far fa-square mr-1"></i> Activar/desactivar pregunta</span>
 				<span class="text-red"><i class="fas fa-trash-alt ml-3 mr-1"></i> Eliminar</span>
-
 			</div>
 			<table class="table w-100 custom-table" id="llistatPreguntes">
 				<thead class="custom-thead">
@@ -36,8 +35,24 @@
 					{% for pregunta in preguntes %}
 						<tr>
 							<td>{{ pregunta.id }}</td>
-							<td>{{ pregunta.preguntaCat }}</td>
-							<td>{{ pregunta.respostaCorrectaCat }}</td>
+							<td>
+								{% if pregunta.preguntaCat != '' %}
+									{{ pregunta.preguntaCat }}
+								{% elseif pregunta.preguntaEs != '' %}
+									{{ pregunta.preguntaEs }}
+								{% else %}
+									{{ pregunta.preguntaEn }}
+								{% endif %}
+							</td>
+							<td>
+								{% if pregunta.respostaCorrectaCat != '' %}
+									{{ pregunta.respostaCorrectaCat }}
+								{% elseif pregunta.respostaCorrectaEs != '' %}
+									{{ pregunta.respostaCorrectaEs }}
+								{% else %}
+									{{ pregunta.respostaCorrectaEn }}
+								{% endif %}
+							</td>
 							<td>{{ pregunta.idTema.nom }}</td>
 							<td>{{ pregunta.idTema.idNivell.nom }}</td>
 							<td>{{ pregunta.idDificultat.nom }}</td>
