--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,19 +284,19 @@ table.aligncenter .col {
 
 /* LLISTAT ALUMNES ETC */
 
-.elementLlistaAlumnes, .elementLlistaAlumnesTd {
+.elementLlistaAlumnes, .elementLlistaAlumnesTd, .elementLlistaJugadors, .elementLlistaJugadorsTd {
 	width: 100%;
 	display: block;
 }
 
-.elementLlistaAlumnes {
+.elementLlistaAlumnes, .elementLlistaJugadors {
 	padding: 10px;
 	transition: background-color .4s ease-in-out;
 	border: 2px solid transparent;
 	border-bottom: 1px solid rgba(41,41,41,0.2);
 }
 
-.elementLlistaAlumnes:hover {
+.elementLlistaAlumnes:hover, .elementLlistaJugadors:hover {
 	background-color: rgba(0,0,0,0.1);
 }
 
