Començament encriptació ids jugadors

--- a/templates/baseJoc.html.twig
+++ b/templates/baseJoc.html.twig
@@ -13,6 +13,15 @@
         <script src="{{ asset('bootstrap4/js/bootstrap.min.js') }}"></script>
         <script src="{{ asset('js/popper.js') }}"></script> 
         <script type="text/javascript" src="{{ asset('Datatables/datatables.min.js') }}"></script>     
+
+        <script src="{{ asset('js/rollups/aes.js') }}"></script>
+        <script src="{{ asset('js/components/aes.js') }}"></script>
+
+        <script src="{{ asset('js/rollups/pbkdf2.js') }}"></script>
+        <script src="{{ asset('js/components/pbkdf2.js') }}"></script>
+
+        <script src="{{ asset('js/damnhx.js') }}"></script>
+
         {% endblock %}
     </head>
 
