--- a/templates/pregunta/afegirEditarPregunta.html.twig
+++ b/templates/pregunta/afegirEditarPregunta.html.twig
@@ -14,34 +14,43 @@
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item"><a href="{{ path('preguntes') }}" class="link-blue"><i class="fas fa-question mr-2"></i>Preguntes</a></li>
-				<li class="breadcrumb-item active" aria-current="page">Afegir pregunta</li>
+				<li class="breadcrumb-item active" aria-current="page">{% if pregunta is defined %}Editar pregunta{% else %}Afegir pregunta{% endif %}</li>
 			</ol>
 		</nav>
 		
 		<div class="card-header border-bottom bg-white d-flex justify-content-between p-0 mt-4">
-			<h1 class="h3">NOVA PREGUNTA</h1><a class="btn btn-link link-blue" href="javascript:history.back()"><i class="fas fa-arrow-left"></i> TORNAR</a>
+			<h1 class="h3">{% if pregunta is defined %}EDITAR PREGUNTA{% else %}NOVA PREGUNTA{% endif %}</h1><a class="btn btn-link link-blue" href="javascript:history.back()"><i class="fas fa-arrow-left"></i> TORNAR</a>
 		</div>
 		<div class="card-body">
 			<div class="col-12 alert alert-info">Selecciona una de les opcions de tots els desplegables i completa com a mínim els camps d'un dels idiomes per continuar.</div>
 			<form method="post">
+				<div class="col-4 p-0 my-4">
+					<h2 class="h5"><i class="fas fa-hashtag fa-sm"></i> ID: {{ pregunta.id }}</h2>
+				</div>
 				<div class="form-row">
 					<div class="col-4 form-group">
 						<label for="nivell">Nivell  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
 						<select name="nivell" id="nivell" class="form-control campPregunta" required>
 							<option value="">-- Selecciona un nivell --</option>
 							{% for nivell in nivells %}
-								<option value="{{ nivell.id }}">{{ nivell.nom }}</option>
+								<option value="{{ nivell.id }}" {% if pregunta is defined and pregunta.idTema.idNivell.id == nivell.id %}selected{% endif %}>{{ nivell.nom }}</option>
 							{% endfor %}
 						</select>
 					</div>
 					<div class="col-4 form-group">
 						<label for="tema">Tema  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
 						<select name="tema" id="tema" class="form-control campPregunta" required>
-							<option value="">-- Selecciona un nivell --</option>
+							{% if pregunta is defined %}
+								{% for tema in temes %}
+									<option value="{{ tema.id }}">{{ tema.nom }}</option>
+								{% endfor %}
+							{% else %}
+								<option value="">-- Selecciona un nivell --</option>
+							{% endif %}
 						</select>
 					</div>
 					<div class="col custom-control custom-checkbox" style="padding-top: 38px; padding-left: 80px;">
-						<input class="custom-control-input" type="checkbox" id="estat" name="estat" checked>
+						<input class="custom-control-input" type="checkbox" id="estat" name="estat" {% if pregunta is defined and pregunta.activa %}checked{% elseif pregunta is not defined %}checked{% endif %}>
         				<label class="custom-control-label" for="estat">Pregunta activa</label>
 					</div>
 				</div>
@@ -51,7 +60,7 @@
 						<select name="dificultat" id="dificultat" class="form-control campPregunta" required>
 							<option value="">-- Selecciona una dificultat --</option>
 							{% for dificultat in dificultats %}
-								<option value="{{ dificultat.id }}">{{ dificultat.nom }}</option>
+								<option value="{{ dificultat.id }}" {% if pregunta is defined and pregunta.idDificultat.id == dificultat.id %}selected{% endif %}>{{ dificultat.nom }}</option>
 							{% endfor %}
 						</select>
 					</div>
@@ -60,7 +69,7 @@
 						<select name="tipus" id="tipus" class="form-control campPregunta" required>
 							<option value="">-- Selecciona un tipus --</option>
 							{% for t in tipus %}
-								<option value="{{ t.id }}">{{ t.nom }}</option>
+								<option value="{{ t.id }}" {% if pregunta is defined and pregunta.tipus.id == t.id %}selected{% endif %}>{{ t.nom }}</option>
 							{% endfor %}
 						</select>
 					</div>
@@ -68,6 +77,7 @@
 				<div class="accordion mt-4" id="idiomesPregunta">
 					{% set idiomes = ['Cat', 'Es', 'En'] %}
 					{% for idioma in idiomes %}
+						{% set preguntaCat = 'pregunta.pregunta' ~ idioma %}
 						<div class="card rounded-0 border-white">
 							<div class="card-header h-auto card-blue border-0 rounded-0" id="heading{{ idioma }}" data-toggle="collapse" data-target="#collapse{{ idioma }}" aria-expanded="false" aria-controls="collapse{{ idioma }}">
 								<span class="mb-0 preguntesLanguageHeader">
@@ -81,7 +91,7 @@
 									<div class="form-row col-8">
 										<div class="col form-group">
 											<label for="nom">Text de la pregunta  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
-											<textarea name="pregunta{{ idioma }}" rows="3" id="pregunta{{ idioma }}" class="form-control campPregunta"></textarea>
+											<textarea name="pregunta{{ idioma }}" rows="3" id="pregunta{{ idioma }}" class="form-control campPregunta" {% if pregunta is defined %}value="{{ preguntaCat }}"{% endif %}></textarea>
 										</div>
 									</div>
 									<div class="form-row col-8">
