--- a/templates/pregunta/afegirEditarPregunta.html.twig
+++ b/templates/pregunta/afegirEditarPregunta.html.twig
@@ -24,9 +24,11 @@
 		<div class="card-body">
 			<div class="col-12 alert alert-info">Selecciona una de les opcions de tots els desplegables i completa com a mínim els camps d'un dels idiomes per continuar.</div>
 			<form method="post">
-				<div class="col-4 p-0 my-4">
-					<h2 class="h5"><i class="fas fa-hashtag fa-sm"></i> ID: {{ pregunta.id }}</h2>
-				</div>
+				{% if pregunta is defined %}
+					<div class="col-4 p-0 my-4">
+						<h2 class="h5"><i class="fas fa-hashtag fa-sm"></i> ID: {{ pregunta.id }}</h2>
+					</div>
+				{% endif %}
 				<div class="form-row">
 					<div class="col-4 form-group">
 						<label for="nivell">Nivell  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
@@ -77,7 +79,27 @@
 				<div class="accordion mt-4" id="idiomesPregunta">
 					{% set idiomes = ['Cat', 'Es', 'En'] %}
 					{% for idioma in idiomes %}
-						{% set preguntaCat = 'pregunta.pregunta' ~ idioma %}
+						{% if pregunta is defined %}
+							{% if idioma == 'Cat' %}
+								{% set textPregunta = pregunta.preguntaCat %}
+								{% set correcta = pregunta.respostaCorrectaCat %}
+								{% set incorrecta1 = pregunta.respostaIncorrecta1Cat %}
+								{% set incorrecta2 = pregunta.respostaIncorrecta2Cat %}
+								{% set incorrecta3 = pregunta.respostaIncorrecta3Cat %}
+							{% elseif idioma == 'Es' %}
+								{% set textPregunta = pregunta.preguntaEs %}
+								{% set correcta = pregunta.respostaCorrectaEs %}
+								{% set incorrecta1 = pregunta.respostaIncorrecta1Es %}
+								{% set incorrecta2 = pregunta.respostaIncorrecta2Es %}
+								{% set incorrecta3 = pregunta.respostaIncorrecta3Es %}
+							{% else %}
+								{% set textPregunta = pregunta.preguntaEn %}
+								{% set correcta = pregunta.respostaCorrectaEn %}
+								{% set incorrecta1 = pregunta.respostaIncorrecta1En %}
+								{% set incorrecta2 = pregunta.respostaIncorrecta2En %}
+								{% set incorrecta3 = pregunta.respostaIncorrecta3En %}
+							{% endif %}
+						{% endif %}
 						<div class="card rounded-0 border-white">
 							<div class="card-header h-auto card-blue border-0 rounded-0" id="heading{{ idioma }}" data-toggle="collapse" data-target="#collapse{{ idioma }}" aria-expanded="false" aria-controls="collapse{{ idioma }}">
 								<span class="mb-0 preguntesLanguageHeader">
@@ -90,28 +112,29 @@
 								<div class="card-body">
 									<div class="form-row col-8">
 										<div class="col form-group">
+											
 											<label for="nom">Text de la pregunta  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
-											<textarea name="pregunta{{ idioma }}" rows="3" id="pregunta{{ idioma }}" class="form-control campPregunta" {% if pregunta is defined %}value="{{ preguntaCat }}"{% endif %}></textarea>
+											<textarea name="pregunta{{ idioma }}" rows="3" id="pregunta{{ idioma }}" class="form-control campPregunta">{{ textPregunta }}</textarea>
 										</div>
 									</div>
 									<div class="form-row col-8">
 										<div class="col form-group">
 											<label for="nom">Resposta correcta  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
-											<textarea name="correcta{{ idioma }}" id="correcta{{ idioma }}" class="form-control campPregunta"></textarea>
+											<textarea name="correcta{{ idioma }}" id="correcta{{ idioma }}" class="form-control campPregunta">{{ correcta }}</textarea>
 										</div>
 										<div class="col form-group">
 											<label for="cognoms">Resposta incorrecta 1  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
-											<textarea name="incorrecta{{ idioma }}1" id="incorrecta{{ idioma }}1" class="form-control campPregunta"></textarea>
+											<textarea name="incorrecta{{ idioma }}1" id="incorrecta{{ idioma }}1" class="form-control campPregunta">{{ incorrecta1 }}</textarea>
 										</div>
 									</div>
 									<div class="form-row col-8">
 										<div class="col form-group">
 											<label for="username">Resposta incorrecta 2  <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
-											<textarea name="incorrecta{{ idioma }}2" id="incorrecta{{ idioma }}2" class="form-control campPregunta"></textarea>
+											<textarea name="incorrecta{{ idioma }}2" id="incorrecta{{ idioma }}2" class="form-control campPregunta">{{ incorrecta2 }}</textarea>
 										</div>
 										<div class="col form-group">
 											<label for="email">Resposta incorrecta 3 <span class="badge" style="font-size: 12px; color: #B4B4B4">( requerit )</span></label>
-											<textarea name="incorrecta{{ idioma }}3" id="incorrecta{{ idioma }}3" class="form-control campPregunta"></textarea>
+											<textarea name="incorrecta{{ idioma }}3" id="incorrecta{{ idioma }}3" class="form-control campPregunta">{{ incorrecta3 }}</textarea>
 										</div>
 									</div>
 								</div>
@@ -120,7 +143,7 @@
 					{% endfor %}
 				</div>
 				<div class="col-12 text-center">
-					<button id="addBtn" type="submit" class="btn customAddBtn mt-3" disabled><i class="fas fa-plus mr-2"></i>Afegir pregunta</button>
+					<button id="addBtn" type="submit" class="btn customAddBtn mt-3" disabled>{% if pregunta is defined %}<i class="fas fa-pencil-alt mr-2"></i>Editar pregunta{% else %}<i class="fas fa-plus mr-2"></i>Afegir pregunta{% endif %}</button>
 				</div>
 			</form>
 		</div>
