--- a/templates/usuari/afegirUsuari.html.twig
+++ b/templates/usuari/afegirUsuari.html.twig
@@ -80,7 +80,7 @@
 	{{ parent() }}
 	<script>
 		$(document).ready(function() {
-			$('.userField').on('keyup keydown change', function() {
+			$('.userField').on('keyup change', function() {
 				validar();
 			});	
 		});
