--- a/templates/usuari/afegirUsuari.html.twig
+++ b/templates/usuari/afegirUsuari.html.twig
@@ -6,7 +6,7 @@
 	<div class="card border-0 m-5">
 		
 		{% for message in app.flashes('success') %}
-            <div class="alert alert-success col-12">
+            <div class="alert fade show alert-success col-12">
                 {{ message }}
             </div>
         {% endfor %}
@@ -83,6 +83,7 @@
 			$('.userField').on('keyup change', function() {
 				validar();
 			});	
+			setTimeout(function(){ $(".alert").alert('close') }, 5000);
 		});
 
 		function validar() {
