--- a/public/css/style.css
+++ b/public/css/style.css
@@ -855,6 +855,18 @@ input[type=password] {
 	display: table;
 	border-top-left-radius: 5px;
 	border-top-right-radius: 5px;
+	position: relative;
+}
+
+.formheader::after {
+	position: absolute;
+	width: 100%;
+	height: 5px;
+	content: '';
+	left: 0;
+	bottom: -5px;
+	background-color: #4ba5e5;
+	z-index: 2;
 }
 
 .formheader h2 {
