--- a/templates/bundles/FOSUserBundle/Profile/show_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/show_content.html.twig
@@ -3,4 +3,6 @@
 <div class="fos_user_user_show">
     <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
     <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+    <p>{{ 'profile.show.nom'|trans }}: {{ user.nom }} {{ user.cognoms }}</p>
+    <p>{{ 'profile.show.codiAlumne'|trans }}: {{ user.codiAlumne }}</p>
 </div>
