--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="{{ asset('bootstrap4/css/bootstrap.min.css') }}"/>
+        <link rel="stylesheet" href="{{ asset('fontAwesome/css/all.css') }}">
         <link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
         <script src="{{ asset('js/jquery.js') }}"></script>    
         <script src="{{ asset('js/popper.js') }}"></script> 
@@ -10,7 +11,7 @@
     </head>
     <body>
     <div class='fondo-eddy'></div>
-    <div class="askuser">
+    <div class="askuser py-4 px-5">
         <div>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                 {{ 'layout.logged_in_as'|trans({'%username%': app.user.username}, 'FOSUserBundle') }} |
@@ -20,7 +21,10 @@
             {% else %}
                 <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
             {% endif %}
+            <div class="float-right"><a class="btn btn-link link-blue p-0" href="javascript:history.back()"><i class="fas fa-arrow-left"></i> TORNAR</a></div>
         </div>
+
+        
 
         {% if app.request.hasPreviousSession %}
             {% for type, messages in app.session.flashbag.all() %}
@@ -36,7 +40,7 @@
                 {% block fos_user_content %}
                 {% endblock fos_user_content %}
             </div>
-
-        </div>
+        
+    </div>
     </body>
 </html>
