--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -6,50 +6,49 @@
 <div> 
 <div class="container-fluid d-flex justify-content-center">
 
-<div class="formulario-login">
+    <div class="formulario-login">
 
-<div class="formheader">
-    <h2>Iniciar sessió</h2>
-</div>
+        <div class="formheader">
+            <h2>Iniciar sessió</h2>
+        </div>
+        <div class="p-4">
+            <form action="{{ path("fos_user_security_check") }}" method="post" class="d-flex justify-content-center">
 
-<form action="{{ path("fos_user_security_check") }}" method="post" class="d-flex justify-content-center">
+                {% if csrf_token %}
+                    <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
+                {% endif %}
 
-    {% if csrf_token %}
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-    {% endif %}
+            <div class="row">
 
-<div class="row">
+            	<div class="col-lg-12">
+                <label class="label_p" for="username">{{ 'security.login.username'|trans }}</label>
+                </div>
+                
+                <div class="col-lg-12">
+                <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
+                </div>
 
-	<div class="col-lg-12">
-    <label class="label_p" for="username">{{ 'security.login.username'|trans }}</label>
+                <div class="col-lg-12">
+                <label class="label_p" for="password">{{ 'security.login.password'|trans }}</label>
+                </div>
+
+                <div class="col-lg-12">
+                <input type="password" class="form-control" id="password" name="_password" required="required" autocomplete="current-password" />
+                </div>
+
+                
+                <div class="col-12 custom-control custom-checkbox" id="rememberDiv">
+                    <input class="custom-control-input" type="checkbox" id="remember_me" name="_remember_me" value="on" />
+                    <label class="remember custom-control-label" for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+                </div>
+
+                <div class="col col-lg-7 mx-auto buttonLoginRegisterDiv">
+                    <input class="btn btn-block customBlueBtn mb-1" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+                 </div>
+                 </form>
+                 <div class="col-7 mx-auto text-center"><a class="btn btn-block customOutlineBtn" href="{{ path('fos_user_registration_register') }}">{{ 'registration.submit'|trans }}</a></div>
+            </div>
     </div>
-    
-    <div class="col-lg-12">
-    <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" />
-    </div>
 
-    <div class="col-lg-12">
-    <label class="label_p" for="password">{{ 'security.login.password'|trans }}</label>
-    </div>
-
-    <div class="col-lg-12">
-    <input type="password" class="form-control" id="password" name="_password" required="required" autocomplete="current-password" />
-    </div>
-
-    
-    <div class="col-lg-12" id="rememberDiv">
-        <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
-        <label class="remember" for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
-    </div>
-
-    <div class="col col-lg-12 buttonLoginRegisterDiv">
-        <input class="btn btn-primary buttonLoginRegister" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
-     </div>
-</div>
-</form>
 </div>
             
-        </div>
-    </div>
-</div>
-</div>
