editar connectat a perfil i inici + estils

--- a/templates/bundles/FOSUserBundle/Profile/edit_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/edit_content.html.twig
@@ -34,7 +34,7 @@
 	    {{ form_widget(form.current_password) }}
 	{% endif %}
 
-    <div class="col col-lg-12 buttonLoginRegisterDiv">
+    <div class="col col-lg-12 mb-3 buttonLoginRegisterDiv">
         <input class="btn buttonLoginRegister customAddBtn" type="submit" value="{{ 'profile.edit.submit'|trans }}" />
     </div>
  
