Afegir usuaris a partida done, retorna array de ID's d'usuari

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1029,8 +1029,11 @@ input[type=password] {
 	float: right;
 }
 
-/* MODAL INICIAR SESSIÓ PARTIDA END */
+#iniciarSessioModalMsg h2 {
+	color: black;
+}
 
+/* MODAL INICIAR SESSIÓ PARTIDA END */
 
 .fos_user_profile_edit input:read-only {
 	background: #E5E5E5;
