taulell en proces III

--- a/templates/partida/joc.html.twig
+++ b/templates/partida/joc.html.twig
@@ -26,11 +26,11 @@
    {% include 'partida/estadistiques.html.twig' %}
 
       <div class="quesitos">
-        <div class="groc no-quesito"></div>
+        <div class="groc"></div>
         <div class="verd "></div>
-        <div class="lila no-quesito"></div>
-        <div class="blau no-quesito"></div>
-        <div class="vermell no-quesito"></div>
+        <div class="lila"></div>
+        <div class="blau"></div>
+        <div class="vermell"></div>
       </div>
 
   <div class="col-2 p-0 right-side">
@@ -41,10 +41,13 @@
   		<div class="log"></div>
   	</div>
   </div>
+
+  {% include 'partida/dau.html.twig' %}
+
   <div class="btn-container">
-    <button class="myButton">TIRAR</button>
+    <button class="tirarDau">TIRAR</button>
   </div>
-  {# {% include 'partida/board.html.twig' %} #}
+   {% include 'partida/board.html.twig' %} 
 <script>
 	{% include 'partida/js/joc.js' %}
 </script>
