--- a/templates/partida/joc.html.twig
+++ b/templates/partida/joc.html.twig
@@ -24,7 +24,7 @@
     </div>
 
    {% include 'partida/estadistiques.html.twig' %}
-
+  </div>
       <div class="quesitos">
         <div class="groc"></div>
         <div class="verd "></div>
@@ -48,6 +48,8 @@
     <button class="tirarDau">TIRAR</button>
   </div>
    {% include 'partida/board.html.twig' %} 
+
+  <div class="opcions"><button><i class="fas fa-cogs"></i></button></div>
 <script>
 	{% include 'partida/js/joc.js' %}
 </script>
