--- a/templates/partida/board.html.twig
+++ b/templates/partida/board.html.twig
@@ -6,7 +6,7 @@
                <div class="box-start-parpadeo"></div>
           <!-- BARRA SUPERIOR DERECHA-->
           <div class="box1 casilla"></div>
-                <div class="box1-parpadeo parpadeo-active"></div>   
+                <div class="box1-parpadeo"></div>   
           <div class="box2 casilla"></div>
                 <div class="box2-parpadeo"></div> 
           <div class="box3 casilla"></div>
