--- a/templates/partida/joc.html.twig
+++ b/templates/partida/joc.html.twig
@@ -26,11 +26,11 @@
    {% include 'partida/estadistiques.html.twig' %}
   </div>
       <div class="quesitos">
-        <div class="groc"></div>
-        <div class="verd "></div>
-        <div class="lila"></div>
-        <div class="blau"></div>
-        <div class="vermell"></div>
+        <div class="groc no-quesito"></div>
+        <div class="verd no-quesito"></div>
+        <div class="lila no-quesito"></div>
+        <div class="blau no-quesito"></div>
+        <div class="vermell no-quesito"></div>
       </div>
 
   <div class="col-2 p-0 right-side">
