--- a/templates/partida/jugadors.html.twig
+++ b/templates/partida/jugadors.html.twig
@@ -1,5 +1,5 @@
 <div class="jugadors">
-	<div class="row actual m-0"><div class="ranking">1</div><div class="col jugador">Jugador 1</div></div>
+	<div class="row m-0"><div class="ranking">1</div><div class="col jugador">Jugador 1</div></div>
 	<div class="row m-0"><div class="ranking">2</div><div class="col jugador">Jugador 2</div></div>
 	<div class="row m-0"><div class="ranking">3</div><div class="col jugador">Jugador 3</div></div>
 	<div class="row m-0"><div class="ranking">4</div><div class="col jugador">Jugador 4</div></div>
